adds passwordInput component

--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -20,5 +20,6 @@
   --uil-xxl: 1.75rem;
   --uil-xxxl: 2rem;
 
-  --uil-font-base: var(--uil-l)
+  --uil-font-base: var(--uil-l);
+  --uil-font-small: var(--uil-m);
 }
