--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -1,30 +1,32 @@
+@use '../global' as *;
+
 .uil-check-wrapper {
   display: flex;
   align-items: center;
-  gap: var(--size-xxs);
-  font-size: var(--size-m);
-  line-height: var(--size-m);
+  gap: var(--uil-s);
+  font-size: var(--uil-font-base);
+  line-height: var(--uil-font-base);
 
   .uil-checkbox {
     position: relative;
     display: block;
     cursor: pointer;
-    font-size: var(--size-xs);
-    min-width: var(--size-xs);;
-    min-height: var(--size-xs);;
+    font-size: var(--uil-m);
+    min-width: var(--uil-m);;
+    min-height: var(--uil-m);;
     user-select: none;
-    border: 3px solid var(--grey-dark);
-    border-radius: var(--border-radius-xs);
+    border: 2px solid var(--uil-black-alt);
+    border-radius: 2px;
 
     input {
       position: absolute;
-      opacity: 0;
       cursor: pointer;
       height: 0;
       width: 0;
+      opacity: 0;
 
       &:checked {
-        ~ .uil-checkmark:after {
+        ~ .uil-checkmark {
           transform: scale(1);
         }
       }
@@ -32,27 +34,13 @@
 
     .uil-checkmark {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: var(--size-xs);
-      height: var(--size-xs);
-
-      &:after {
-        content: '';
-        position: absolute;
-        top: 25%;
-        left: 25%;
-        background-color: var(--black);
-        width: var(--size-tiny);
-        height: var(--size-tiny);
-        transform: scale(0);
-        transition: .1s ease;
-      }
+      top: 25%;
+      left: 25%;
+      background-color: var(--uil-black-alt);
+      width: var(--uil-xs);
+      height: var(--uil-xs);
+      transform: scale(0);
+      transition: .1s ease;
     }
-  }
-
-  & span {
-    user-select: none;
-    cursor: pointer;
   }
 }
