--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -7,6 +7,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 99;
 
   .uil-modal {
     position: absolute;
@@ -17,6 +18,7 @@
     -webkit-box-shadow: 0 0 6px 0 var(--uil-black);
     box-shadow: 0 0 6px 0 var(--uil-black);
     border-radius: 5px;
+    z-index: 999;
 
     @include uil-desktop {
       width: 75%;
