adds new modal type warning

--- a/src/components/global.scss
+++ b/src/components/global.scss
@@ -14,6 +14,7 @@
   --uil-success: #006A4E;
   --uil-error: #800020;
   --uil-question: #00416A;
+  --uil-warning: #FFD700;
 
   --uil-xxxs: .125rem;
   --uil-xxs: .25rem;
