--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -8,6 +8,7 @@
   background-color: var(--uil-white);
   border: 1px solid var(--uil-black);
   border-radius: 2px;
+  height: fit-content;
   width: fit-content;
   cursor: pointer;
   padding: var(--uil-xs) var(--uil-s);
@@ -24,11 +25,5 @@
     font-size: var(--uil-m);
     line-height: var(--uil-m);
     padding: var(--uil-xxs) var(--uil-xs);
-
-    @include uil-desktop {
-      font-size: 1.125rem;
-      line-height: 1.125rem;
-      padding: var(--uil-xs) var(--uil-s);
-    }
   }
 }
