--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -15,6 +15,10 @@
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+
+  /*TODO test container size*/
+  --ifm-container-width-xl: 65%;
+  --ifm-container-width: 70%;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
