--- a/website/src/components/Props/index.scss
+++ b/website/src/components/Props/index.scss
@@ -1,16 +1,19 @@
 .table {
   text-align: left;
 
-  td, th {
+  td, th, tr {
     border: none;
   }
 
   tbody {
     border: 1px solid darkgrey;
+    border-top: none;
   }
 
   thead {
     background-color: #0047CC;
     color: white;
+    border: 1px solid darkgrey;
+    border-bottom: none;
   }
 }
