--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -32,3 +32,8 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+.showcase {
+  display: flex;
+  gap: 2rem;
+}
