--- a/packages/src/components/input/input.scss
+++ b/packages/src/components/input/input.scss
@@ -69,6 +69,9 @@
     top: 50%;
     right: var(--uil-xs);
     transform: translate(0%, -50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     fill: var(--uil-black);
     opacity: .5;
   }
