--- a/packages/src/components/global.scss
+++ b/packages/src/components/global.scss
@@ -1,61 +1,14 @@
-:root {
-  --uil-black: #000000;
-  --uil-black-alt: #222222;
+@use "variables" as *;
 
-  --uil-white: #ffffff;
-
-  --uil-grey: #f3f3f3;
-  --uil-grey-alt: #cfcfcf;
-  --uil-grey-dark: #878787;
-
-  --uil-outline-focus: #1E90FFFF;
-  --uil-outline-disabled: #8B0000FF;
-
-  --uil-success: #006A4E;
-  --uil-error: #800020;
-  --uil-question: #00416A;
-  --uil-warning: #FFD700;
-
-  --uil-xxxs: .125rem;
-  --uil-xxs: .25rem;
-  --uil-xs: .5rem;
-  --uil-s: .75rem;
-  --uil-m: 1rem;
-  --uil-l: 1.25rem;
-  --uil-xl: 1.5rem;
-  --uil-xxl: 1.75rem;
-  --uil-xxxl: 2rem;
-
-  --uil-font-base: var(--uil-l);
-  --uil-font-small: var(--uil-m);
+.uil-wf {
+  width: fit-content;
 }
 
-@mixin uil-mobile {
-  @media (max-width: 1024px) {
-    @content
-  }
+.uil-hf {
+  height: fit-content;
 }
 
-@mixin uil-tablet {
-  @media (min-width: 760px) {
-    @content
-  }
-}
-
-@mixin uil-desktop {
-  @media (min-width: 1025px) {
-    @content
-  }
-}
-
-@mixin uil-widescreen {
-  @media (min-width: 1250px) {
-    @content
-  }
-}
-
-@mixin uil-fullHD {
-  @media (min-width: 1920px) {
-    @content
-  }
+.uil-font-base {
+  font-size: var(--uil-font-base);
+  line-height: var(--uil-font-base);
 }
