*refactors component styling

--- a/packages/src/components/global.scss
+++ b/packages/src/components/global.scss
@@ -1,11 +1,8 @@
 @use "variables" as *;
 
-.uil-wf {
-  width: fit-content;
-}
-
-.uil-hf {
+.uil-fit {
   height: fit-content;
+  width: fit-content;
 }
 
 .uil-font-base {
