--- a/packages/src/components/button/button.scss
+++ b/packages/src/components/button/button.scss
@@ -18,8 +18,8 @@
   }
 
   &.uil-small {
-    font-size: var(--uil-m);
-    line-height: var(--uil-m);
+    font-size: var(--uil-font-small);
+    line-height: var(--uil-font-small);
     padding: var(--uil-xxs) var(--uil-xs);
   }
 }
