--- a/packages/src/components/checkbox/checkbox.scss
+++ b/packages/src/components/checkbox/checkbox.scss
@@ -11,7 +11,8 @@
     position: relative;
     display: block;
     cursor: pointer;
-    font-size: var(--uil-m);
+    font-size: var(--uil-font-small);
+    line-height: var(--uil-font-small);
     min-width: var(--uil-m);;
     min-height: var(--uil-m);;
     user-select: none;
