*updates radio button component & adds missing styling

--- a/packages/src/utils/styles.scss
+++ b/packages/src/utils/styles.scss
@@ -3,4 +3,5 @@
 @use "../components/images/images";
 @use "../components/input/input";
 @use "../components/modal/modal";
+@use "../components/radio/radio";
 @use "../components/global";
