--- a/packages/src/components/global.scss
+++ b/packages/src/components/global.scss
@@ -9,3 +9,44 @@
   font-size: var(--uil-font-base);
   line-height: var(--uil-font-base);
 }
+
+.uil-check {
+  position: relative;
+  display: block;
+  cursor: pointer;
+  font-size: var(--uil-font-small);
+  line-height: var(--uil-font-small);
+  min-width: var(--uil-m);;
+  min-height: var(--uil-m);;
+  user-select: none;
+  border: 2px solid var(--uil-black-alt);
+
+  &:has(input:disabled) {
+    background-color: var(--uil-grey-alt);
+  }
+
+  input {
+    position: absolute;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+    opacity: 0;
+
+    &:checked {
+      ~ .uil-checkmark {
+        transform: scale(1);
+      }
+    }
+  }
+
+  .uil-checkmark {
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    background-color: var(--uil-black-alt);
+    width: var(--uil-xs);
+    height: var(--uil-xs);
+    transform: scale(0);
+    transition: .1s ease;
+  }
+}
