--- a/packages/src/components/global.scss
+++ b/packages/src/components/global.scss
@@ -16,10 +16,11 @@
   cursor: pointer;
   font-size: var(--uil-font-small);
   line-height: var(--uil-font-small);
-  min-width: var(--uil-m);;
-  min-height: var(--uil-m);;
+  min-height: var(--uil-l);
+  min-width: var(--uil-l);
   user-select: none;
   border: 2px solid var(--uil-black-alt);
+  box-sizing: border-box;
 
   &:has(input:disabled) {
     background-color: var(--uil-grey-alt);
