*changes border color of disabled checkboxes/radio buttons

--- a/packages/src/components/global.scss
+++ b/packages/src/components/global.scss
@@ -24,6 +24,7 @@
 
   &:has(input:disabled) {
     background-color: var(--uil-grey-alt);
+    border-color: var(--uil-grey-dark);
   }
 
   input {
