--- a/packages/src/components/modal/modal.scss
+++ b/packages/src/components/modal/modal.scss
@@ -101,15 +101,10 @@
       }
 
       .uil-modal-text {
-        font-size: var(--uil-font-small);
-        line-height: var(--uil-font-small);
+        font-size: var(--uil-font-base);
+        line-height: var(--uil-font-base);
         color: var(--uil-black);
-        margin: var(--uil-s) 0;
-
-        @include uil-tablet {
-          font-size: var(--uil-font-base);
-          line-height: var(--uil-font-base);
-        }
+        margin: 0;
       }
 
       .uil-button-wrapper {
