--- a/packages/src/components/variables.scss
+++ b/packages/src/components/variables.scss
@@ -17,12 +17,13 @@
   --uil-success: #009c73;
   --uil-success-dark: #014334;
 
-  --uil-error-light: #ff7997;
+  --uil-error-light: #FF073A;
   --uil-error: #a30029;
-  --uil-error-dark: #530017;
+  --uil-error-dark: #4e0015;
 
   --uil-question: #00416A;
 
+  --uil-warning-light: #FFFF8A;
   --uil-warning: #FFD700;
   --uil-warning-dark: #7b6300;
 
