--- a/packages/src/components/global.scss
+++ b/packages/src/components/global.scss
@@ -6,8 +6,8 @@
 }
 
 .uil-font-base {
-  font-size: var(--uil-font-base);
-  line-height: var(--uil-font-base);
+  font-size: var(--uil-font-medium);
+  line-height: var(--uil-font-medium);
 }
 
 .uil-check {
