--- a/packages/src/components/modal/modal.scss
+++ b/packages/src/components/modal/modal.scss
@@ -101,8 +101,8 @@
       }
 
       .uil-modal-text {
-        font-size: var(--uil-font-base);
-        line-height: var(--uil-font-base);
+        font-size: var(--uil-font-medium);
+        line-height: var(--uil-font-medium);
         color: var(--uil-black);
         margin: 0;
       }
