--- a/packages/src/components/checkbox/checkbox.scss
+++ b/packages/src/components/checkbox/checkbox.scss
@@ -4,8 +4,8 @@
   display: flex;
   align-items: center;
   gap: var(--uil-s);
-  font-size: var(--uil-font-base);
-  line-height: var(--uil-font-base);
+  font-size: var(--uil-font-medium);
+  line-height: var(--uil-font-medium);
 
   .uil-checkbox {
     border-radius: 2px;
