--- a/packages/src/components/radio/radio.scss
+++ b/packages/src/components/radio/radio.scss
@@ -1,12 +1,5 @@
 @use '../variables' as *;
 
-.uil-radio-title {
-  display: block;
-  font-size: var(--uil-xl);
-  line-height: var(--uil-xl);
-  margin-bottom: var(--uil-m);
-}
-
 .uil-radio-wrapper {
   display: flex;
   flex-direction: column;
@@ -16,6 +9,19 @@
     display: flex;
     align-items: center;
     gap: .25rem;
+
+    .uil-radio-text {
+      cursor: pointer;
+      color: var(--uil-black);
+
+      &~input:disabled {
+        cursor: not-allowed;
+      }
+
+      &.uil-dark {
+        color: var(--uil-white);
+      }
+    }
 
     .uil-radio {
       border-radius: 50%;
