*test css modules

--- a/packages/src/components/button/button.module.scss
+++ b/packages/src/components/button/button.module.scss
@@ -1,6 +1,6 @@
-@use '../variables' as *;
+@use '../mixin' as *;
 
-.uil-button {
+.button {
   cursor: pointer;
   letter-spacing: 1px;
   border: 1px solid var(--uil-black-light);
@@ -14,31 +14,31 @@
     -webkit-box-shadow: inset 0 0 0 10rem rgba(0, 0, 0, .15);
   }
 
-  &.uil-primary {
+  &.primary {
     color: var(--uil-white);
     border-color: var(--uil-grey-darker);
 
-    &.uil-success {
+    &.success {
       background-color: var(--uil-success);
     }
 
-    &.uil-warning {
+    &.warning {
       color: var(--uil-black);
       background-color: var(--uil-warning);
     }
 
-    &.uil-error {
+    &.error {
       background-color: var(--uil-error);
       border-color: var(--uil-black-light);
     }
   }
 
-  &.uil-secondary {
+  &.secondary {
     color: var(--uil-black-light);
     background-color: var(--uil-white);
   }
 
-  &.uil-outline {
+  &.outline {
     background-color: transparent;
     box-shadow: none;
     -webkit-box-shadow: none;
@@ -48,23 +48,23 @@
       margin: -1px;
     }
 
-    &.uil-success {
+    &.success {
       color: var(--uil-success-dark);
       border-color: var(--uil-success);
     }
 
-    &.uil-warning {
+    &.warning {
       color: var(--uil-warning-dark);
       border-color: var(--uil-warning);
     }
 
-    &.uil-error {
+    &.error {
       color: var(--uil-error);
       border-color: var(--uil-error);
     }
   }
 
-  &.uil-text {
+  &.text {
     color: var(--uil-black-alt);
     text-decoration: underline;
     background-color: transparent;
@@ -77,11 +77,11 @@
     }
   }
 
-  &.uil-disabled {
+  &.disabled {
     color: var(--uil-grey-darker);
     cursor: not-allowed;
 
-    &.uil-primary, &.uil-secondary {
+    &.primary, &.secondary {
       background-color: var(--uil-grey);
       border-color: var(--uil-grey-darker);
 
@@ -91,11 +91,11 @@
       }
     }
 
-    &.uil-secondary {
+    &.secondary {
       background-color: transparent;
     }
 
-    &.uil-outline {
+    &.outline {
       color: var(--uil-grey-darker);
       border-color: var(--uil-grey-darker);
 
@@ -107,7 +107,7 @@
       }
     }
 
-    &.uil-text {
+    &.text {
 
       &:hover {
         background-color: transparent;
@@ -115,7 +115,7 @@
     }
   }
 
-  &.uil-dark {
+  &.dark {
     color: var(--uil-white);
     box-shadow: none;
     -webkit-box-shadow: none;
@@ -125,39 +125,39 @@
       -webkit-box-shadow: inset 0 0 0 10rem rgba(255, 255, 255, .15);
     }
 
-    &.uil-primary {
-      &.uil-success {
+    &.primary {
+      &.success {
         color: var(--uil-success-light);
         background-color: var(--uil-success-dark);
         border-color: var(--uil-success);
       }
 
-      &.uil-warning {
+      &warning {
         color: var(--uil-warning-light);
         background-color: var(--uil-warning-dark);
         border-color: var(--uil-warning);
       }
 
-      &.uil-error {
+      &error {
         color: var(--uil-error-light);
         background-color: var(--uil-error-dark);
         border-color: var(--uil-error);
       }
     }
 
-    &.uil-secondary {
+    &secondary {
       background-color: var(--uil-black-lighter);
       border-color: var(--uil-grey-dark);
     }
 
-    &.uil-outline {
+    &outline {
 
       &:hover {
         box-shadow: none;
         -webkit-box-shadow: none;
       }
 
-      &.uil-success {
+      &success {
         color: var(--uil-success);
         border-color: var(--uil-success);
 
@@ -166,7 +166,7 @@
         }
       }
 
-      &.uil-warning {
+      &warning {
         color: var(--uil-warning);
         border-color: var(--uil-warning);
 
@@ -175,7 +175,7 @@
         }
       }
 
-      &.uil-error {
+      &error {
         color: var(--uil-error);
         border-color: var(--uil-error);
 
@@ -185,7 +185,7 @@
       }
     }
 
-    &.uil-text {
+    &text {
       &:hover {
         box-shadow: none;
         -webkit-box-shadow: none;
@@ -193,7 +193,7 @@
       }
     }
 
-    &.uil-disabled {
+    &disabled {
       color: var(--uil-grey-dark);
       background-color: var(--uil-black-lighter);
       border-color: var(--uil-grey-dark);
@@ -205,11 +205,11 @@
         -webkit-box-shadow: none;
       }
 
-      &.uil-secondary {
+      &secondary {
         background-color: var(--uil-black-light);
       }
 
-      &.uil-outline {
+      &outline {
         color: var(--uil-grey-dark);
         background-color: transparent;
         border-color: var(--uil-grey-dark);
@@ -224,14 +224,14 @@
         }
       }
 
-      &.uil-text {
+      &text {
         background-color: transparent;
         border-color: transparent;
       }
     }
   }
 
-  &.uil-small {
+  &small {
     font-size: var(--uil-s);
     line-height: var(--uil-s);
     padding: var(--uil-xxs);
@@ -243,7 +243,7 @@
     }
   }
 
-  &.uil-medium {
+  &medium {
     font-size: var(--uil-m);
     line-height: var(--uil-m);
     letter-spacing: 2px;
@@ -256,7 +256,7 @@
     }
   }
 
-  &.uil-large {
+  &large {
     font-size: var(--uil-xl);
     line-height: var(--uil-xl);
     letter-spacing: 3px;
