--- a/packages/src/styles.scss
+++ b/packages/src/styles.scss
@@ -1,6 +1,6 @@
-@use "components/button/button";
-@use "components/checkbox/checkbox";
+@use "components/button/button.module";
+@use "components/checkbox/checkbox.module";
 @use "components/input/input";
 @use "components/modal/modal";
 @use "components/radio/radio";
-@use "components/global";
+@use "components/global.module";
